--- a/app/blog/posts/markdown-mdx.mdx
+++ b/app/blog/posts/markdown-mdx.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Markdown y MDX'
 publishedAt: '2024-05-14'
-summary: 'Los alcances del uso de Markdown en tus proyectos.'
+summary: 'Comienza a usar Markdown y potencia tus proyectos con su uso.'
 ---
 ## Markdown y MDX.
 
