--- a/app/blog/posts/tipado-mdx.mdx
+++ b/app/blog/posts/tipado-mdx.mdx
@@ -1,69 +1,69 @@
 ---
-title: 'Cómo usar MDX en Next.js'
+title: 'How to Use MDX in Next.js'
 publishedAt: '2024-04-14'
-summary: 'Aprende a utilizar la sintaxis de MDX en Next.js para crear contenido dinámico en tu blog.'
+summary: 'Learn how to use MDX syntax in Next.js to create dynamic content in your blog.'
 ---
 
-# Cómo usar MDX en Next.js
+# How to Use MDX in Next.js
 
-## Introducción
+## Introduction
 
-MDX es una herramienta poderosa que combina Markdown con React, permitiéndote crear contenido dinámico y personalizado en tus aplicaciones web. En este artículo, exploraremos cómo utilizar MDX en Next.js, un popular framework de React, para crear contenido interactivo en tu blog.
+MDX is a powerful tool that combines Markdown with React, allowing you to create dynamic and personalized content in your web applications. In this article, we will explore how to use MDX in Next.js, a popular React framework, to create interactive content in your blog.
 
-## Sintaxis básica de MDX
+## Basic MDX Syntax
 
-MDX utiliza una sintaxis similar a Markdown, lo que lo hace familiar para aquellos que están acostumbrados a escribir en Markdown. Sin embargo, MDX agrega capacidades de React, lo que te permite incrustar componentes de React directamente en tu contenido. A continuación, veremos algunos ejemplos de la sintaxis básica de MDX:
+MDX uses a syntax similar to Markdown, making it familiar for those accustomed to writing in Markdown. However, MDX adds React capabilities, allowing you to embed React components directly into your content. Below, we will look at some examples of basic MDX syntax:
 
-### Encabezados
+### Headings
 
-Los encabezados en MDX se crean de manera similar a Markdown:
+Headings in MDX are created similarly to Markdown:
 
-# Este es un encabezado de nivel 1
+# This is a level 1 heading
 
-## Este es un encabezado de nivel 2
+## This is a level 2 heading
 
-## Listas
+## Lists
 
-Las listas se crean de la misma manera que en Markdown:
+Lists are created in the same way as in Markdown:
 
-- Uno
-- Dos
-- Tres
+- One
+- Two
+- Three
 
 ```csharp
-    <h2>Listas</h2>
-    <p>Las listas se crean de la misma manera que en Markdown:</p>
+    <h2>Lists</h2>
+    <p>Lists are created in the same way as in Markdown:</p>
     <ul>
-        <li>Uno</li>
-        <li>Dos</li>
-        <li>Tres</li>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
     </ul>
 ```
 
-### Enlaces
+### Links
 
-Puedes crear enlaces de la siguiente manera:
+You can create links as follows:
 
-[Enlace a Google](https://www.google.com/)
+[Link to Google](https://www.google.com/)
 
-### Componentes de React
+### React Components
 
-Una de las características más potentes de MDX es la capacidad de incrustar componentes de React directamente en tu contenido.
+One of the most powerful features of MDX is the ability to embed React components directly into your content.
 
-## Creando contenido dinámico
+## Creating Dynamic Content
 
-La capacidad de utilizar componentes de React dentro de tu contenido MDX te permite crear contenido dinámico y personalizado para tu blog. Puedes incluir componentes interactivos, gráficos, formularios y mucho más directamente en tus publicaciones de blog.
+The ability to use React components within your MDX content allows you to create dynamic and personalized content for your blog. You can include interactive components, charts, forms, and much more directly in your blog posts.
 
-Por ejemplo, podrías crear un componente de encuesta y mostrar los resultados en tiempo real en tu blog utilizando MDX y Next.js.
+For example, you could create a survey component and display real-time results on your blog using MDX and Next.js.
 
-## Integrando MDX en Next.js
+## Integrating MDX into Next.js
 
-En Next.js, puedes integrar MDX de forma nativa sin necesidad de configuraciones complicadas. Simplemente crea archivos MDX en tu proyecto Next.js y Next.js los reconocerá automáticamente como páginas o componentes, según su ubicación en el directorio.
+In Next.js, you can integrate MDX natively without needing complicated configurations. Simply create MDX files in your Next.js project, and Next.js will automatically recognize them as pages or components, depending on their location in the directory.
 
-Por ejemplo, podrías tener una página de blog que cargue contenido desde archivos MDX, permitiéndote escribir tus publicaciones de blog en MDX y verlas renderizadas en tu aplicación Next.js.
+For example, you could have a blog page that loads content from MDX files, allowing you to write your blog posts in MDX and see them rendered in your Next.js application.
 
-## Conclusiones
+## Conclusions
 
-MDX es una herramienta poderosa que te permite combinar la simplicidad de Markdown con la potencia de React. En Next.js, puedes utilizar MDX para crear contenido dinámico y personalizado en tu blog, lo que te permite destacarte y ofrecer una experiencia de usuario única a tus lectores.
+MDX is a powerful tool that allows you to combine the simplicity of Markdown with the power of React. In Next.js, you can use MDX to create dynamic and personalized content in your blog, allowing you to stand out and offer a unique user experience to your readers.
 
-Experimenta con la sintaxis de MDX y descubre nuevas formas de presentar tu contenido en tu blog con Next.js. ¡Esperamos ver lo que creas!
+Experiment with MDX syntax and discover new ways to present your content on your blog with Next.js. We look forward to seeing what you create!
